# PlayMe

./: .travis.yml  Dockerfile  LICENSE  README.md  app.py  cc.yaml  dodo.py  pyproject.toml  requirements.txt  scripts.py  server.py  tasks.py
.circleci/: config.yml
.github/workflows/: ci.yml  docker-image.yml
docs/: configuracion_git.md  descripcion.md  planificacion.md  propuesta.md
docs/avance_codigo/: avance_hito2.md  avance_hito3.md  avance_hito4.md
docs/justificacion_ci/: sistemas_ci.md
docs/justificacion_docker/: justificacion_dockerfile.md  justificacion_dockerhub.md  justificacion_gcr.md
docs/justificacion_herramientas_testing/: justificacion_biblioteca_aserciones.md  justificacion_gestores_tareas.md  justificacion_test_framework.md
docs/justificacion_microservicios/: configuracion_distribuida.md  disenio_api.md  justificacion_framework.md  justificacion_logs.md
playme/: controlador_prestamo.py  juego.py  prestamo.py
playme/src/: catalogo.py  cliente.py  controlador_prestamo.py  juego.py  prestamo.py  trabajador.py  usuario.py
playme/test/: test_assertpy.py  test_controlador_prestamo.py  test_grappa.py  test_verify.py  unittest_controlador_prestamo.py
routers/: controlador_prestamo.py  prestamo.py
test/: test_prestamo.py
tests/: test_api_controlador_prestamo.py  test_api_prestamo.py  test_controlador_prestamo.py  test_prestamo.py
